# LVLMSarcasmAnalysis

./: README.md  pyproject.toml
examples/: analyzer_config.json  evaluator_config.json
lvlm_sarcasm_analysis/: __main__.py  generator_map_functions.py
lvlm_sarcasm_analysis/analysizer/: model_nll_analysis.py
lvlm_sarcasm_analysis/analyzer/: inter_prompt_consistency.py  netral_label_analysis.py
lvlm_sarcasm_analysis/prompts/: lcs-task.toml  scs-task.toml
lvlm_sracasm_analysis/: __main__.py
lvlm_sracasm_analysis/analysizer/: __init__.py  agreement_with_ground_truth.py  base.py
lvlm_sracasm_analysis/prompts/: bsc-task.toml  tsc-task.toml
